2010-04-08  Miloslav Trmač  <mitr@redhat.com>

	* consolehelper.c (main): Don't put garbage in DESKTOP_STARTUP_ID if it
	was unset.

2010-03-31  Miloslav Trmač  <mitr@redhat.com>

	* userhelper.h (ERR_MAX_TRIES): New definition.
	* userhelper.c (fail_exit): Convert PAM_MAXTRIES into ERR_MAX_TRIES.
	* userhelper-wrap.c (userhelper_parse_exitstatus): Add error message for
	ERR_MAX_TRIES.

2010-03-26  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 1.104.2.
	* NEWS: Update.

2010-03-04  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 1.104.1.
	* NEWS: Update.
	* po/LINGUAS: Sort.

	* Makefile.am (archive)
	* configure.ac: Use xz to compress the distribution tarball.

2010-02-25  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 1.104.
	* NEWS: Update.

	* userhelper-wrap.c (userhelper_read_childout): Handle messages in
	non-UTF-8 encodings that use more bytes in UTF-8.
	(userhelper_runv): Disable character set conversion in childout_channel.

2010-02-16  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 1.103.
	* NEWS: Update.
	* po/LINGUAS: Update.

2010-02-05  Miloslav Trmač  <mitr@redhat.com>

	* userhelper.c (become_super_supplementary_groups)
	(become_super_other): Split from become_super().
	(wrap): Use pam_setcred().

	* userhelper.c (become_super): Use root's supplementary groups.

	* userhelper.c (passwd, chfn, wrap): Use "data" instead of
	dereferencing conv->appdata_ptr again.

	* userhelper.c (set_pam_items): New function.
	(passwd, chfn, wrap): Use pam_set_items.

2010-02-04  Miloslav Trmač  <mitr@redhat.com>

	* userhelper.c (become_super): Check for failures of the system
	calls in addition to verifying the expected results.
	(become_normal): Check for failures of the system
	calls in addition to verifying the expected results.  Call setregid()
	as well.  Verify the real gid/uid values.

2009-10-05  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 1.102.
	* NEWS: Update.
